src/objects/User.object
<CustomObject>
    <fields>
        <fullName>AbolitionDate__c</fullName>
        <label>廃止日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Access_To_CCP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access To CCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_To_CXKnowledge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access To CXKnowledge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_To_Channel_With_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access To Channel With Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_To_Channel_Without_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access To Channel Without Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_To_Hearing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access To Hearing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_To_SANX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access To SANX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_To_SBari__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access To SBari</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_To_STPD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access To STPD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_To_SalesKnowledge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access To SalesKnowledge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_To_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access To Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_To_Telema__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access To Telema</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_To_ToDo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access To ToDo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayedUsernameFormula__c</fullName>
        <formula>IF( ISBLANK( DisplayedUsername__c ) , LastName &amp; &quot; &quot; &amp; FirstName, DisplayedUsername__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Displayed Username (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayedUsername__c</fullName>
        <description>Username shown in timeline / comments / ...</description>
        <label>Displayed Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailHeader__c</fullName>
        <label>Email Header</label>
        <length>1333</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ForcePasswordReset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ForcePasswordReset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GpsConsentAsked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>GPS consent should be asked the 1st time on the mobile application. This flag indicates if the consent should be asked (GpsConsentAsked__c = false) or not (GpsConsentAsked__c = true).</description>
        <label>GpsConsentAsked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GpsConsentDatetime__c</fullName>
        <label>GpsConsentDatetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GpsConsentResult__c</fullName>
        <defaultValue>false</defaultValue>
        <description>GPS consent should be asked the 1st time on the mobile application. This flag indicates if the user has given his consent (GpsConsentResult__c = true) or not (GpsConsentResult__c = false) to log his GPS locations.</description>
        <label>GpsConsentResult</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasAccessCX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Access CX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasAccessSTPD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Access STPD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hierarchical_Code_1__c</fullName>
        <label>Hierarchical Code 1</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchical_Code_2__c</fullName>
        <label>Hierarchical Code 2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchical_Code_3__c</fullName>
        <label>Hierarchical Code 3</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchical_Code_Aggregated__c</fullName>
        <formula>Hierarchical_Code_1__c+Hierarchical_Code_2__c+Hierarchical_Code_3__c+Hierarchical_Code_4__c+Hierarchical_Code_5__c+Hierarchical_Code_6__c+Hierarchical_Code_7__c+Hierarchical_Code_8__c</formula>
        <label>Hierarchical Code Aggregated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchical_Code_Complete__c</fullName>
        <label>Hierarchical Code Complete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchical_Label_3__c</fullName>
        <label>第3階層名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchical_Label_4__c</fullName>
        <label>第4階層名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchical_Label_5__c</fullName>
        <label>第5階層名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsRestrictedUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRestrictedUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KDDIEmployeeId__c</fullName>
        <externalId>true</externalId>
        <label>社員番号</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastApprovalRequestEmail__c</fullName>
        <label>Last Approval Request Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MailAddressMemory10__c</fullName>
        <label>HearingTodo_AddressMemory10</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MailAddressMemory1__c</fullName>
        <label>メールアドレス記憶1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MailAddressMemory2__c</fullName>
        <label>メールアドレス記憶2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MailAddressMemoryLast__c</fullName>
        <label>メールアドレス記憶（最新）</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PasswordResetOneTimeKey__c</fullName>
        <label>PasswordResetOneTimeKey</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonalMemo__c</fullName>
        <label>個人メモ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>役職</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfileName__c</fullName>
        <formula>Profile.Name</formula>
        <label>ProfileName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PushNotificationCountGroupChat__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PushNotificationCountGroupChat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PushNotificationCountHearing__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PushNotificationCountHearing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PushNotificationCountHonbuDirect__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PushNotificationCountHonbuDirect</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PushNotificationCountMessages__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PushNotificationCountMessages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PushNotificationCountSanxHearing__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PushNotificationCountSanxHearing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PushNotificationCountTasks__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PushNotificationCountTasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PushNotificationCountTotal__c</fullName>
        <formula>PushNotificationCountGroupChat__c + PushNotificationCountHearing__c + PushNotificationCountHonbuDirect__c + PushNotificationCountMessages__c + PushNotificationCountSanxHearing__c + PushNotificationCountTasks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PushNotificationCountTotal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReceiveApprovalRequestEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>承認依頼メール通知</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RegionalOfficeClassification__c</fullName>
        <label>支社区分</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionalOfficeCode__c</fullName>
        <label>支社コード</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAApprover1__c</fullName>
        <label>SAApprover1</label>
        <relationshipName>SA_SAApprover1</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>SAApprover2__c</fullName>
        <label>SAApprover2</label>
        <relationshipName>SA_SAApprover2</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>SAApprover3__c</fullName>
        <label>SAApprover3</label>
        <relationshipName>SA_SAApprover3</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>SAArea__c</fullName>
        <label>SAArea</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SABusinessLocationCode__c</fullName>
        <label>拠点コード</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SACertification__c</fullName>
        <label>SA資格名称</label>
        <picklist>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADVANCED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAClassification__c</fullName>
        <label>社員区分</label>
        <picklist>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTRACTOR</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAManager__c</fullName>
        <label>SAManager</label>
        <relationshipName>SA_SAManager</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>SAOffice__c</fullName>
        <label>事業所</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAPosition__c</fullName>
        <label>SAPosition</label>
        <picklist>
            <picklistValues>
                <fullName>VENDOR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAReceiveApprovalRequestEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SA承認依頼メール通知</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAReceiveEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAメール通知</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAStaffNo__c</fullName>
        <label>スタッフNo</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAUserId__c</fullName>
        <externalId>true</externalId>
        <label>教育用スタッフID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechnicalAlwaysFalse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technical field used to add a checkbox to a selection of users.
Should always be False in the database.</description>
        <label>TechnicalAlwaysFalse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TechnicalString__c</fullName>
        <description>Should always be empty. Used only inside the code.</description>
        <label>TechnicalString</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UpdatePermissionSet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UpdatePermissionSet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UsernameKana__c</fullName>
        <label>UsernameKana</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator,System Admin</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>SALES.CONTACT.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>SAClassification__c</columns>
        <columns>SACertification__c</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>